style.css
/* sets styling for all elements on the page */
body {
  margin: 0 auto;
  background-color: black;
  color: white;
  width: 70%;
  font-family: "Asap", sans-serif;
  text-align: center;
}
/* styles the navigation */
nav {
  background-color: darkslategrey;
  display: flex;
  justify-content: space-around;
}
/* styling the text of the nav and footer links */
nav a,
footer a {
  font-weight: 700;
  text-decoration: none;
}
/* setting emphasis on nav and footer links when hovered  */
nav a:hover,
footer a:hover {
  color: firebrick;
}
/* color styling for all headings and nav links */
nav a,
h1,
h2,
h3 {
  color: teal;
}
/* sizing header image */
header img {
  height: 400px;
}
/* styling page break */
hr {
  color: teal;
  width: 90%;
}
/* styling all section lists */
section li {
  list-style-position: inside;
  padding: 5px;
}
/* styling footer links */
footer a {
  color: darkslategrey;
  padding-bottom: 10px;
}

